js/.old/ABLParser.js
// Generated from ABL.g4 by ANTLR 4.5
// jshint ignore: start
var antlr4 = require('./antlr4/index');
var ABLListener = require('./ABLListener').ABLListener;
var grammarFileName = "ABL.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ 'null', "'package'", "';'", "'import'", "'constants'", 
                     "'joint_goal_success_negotiation'", "'team_needed_for_success'", 
                     "'one_needed_for_success'", "'decision_cycle_sm_call'", 
                     "'conflict'", "'behaving_entity'", "'{'", "'}'", "'initial_tree'", 
                     "'('", "')'", "'ruleGroup'", "'g_rule'", "'rule'", 
                     "'->'", "'wmeassert'", "'!'", "'='", "'=='", "'touch'", 
                     "'copy'", "'fail'", "'succeed'", "'wait'", "'act'", 
                     "'joint'", "'spawngoal'", "'at'", "'execute_parallel'", 
                     "'entityMem'", "'if'", "'else'", "'move_step'", "'delete_step'", 
                     "'add_step'", "'number_needed_for_success'", "'run_rule'", 
                     "'run_rulegroup'", "'choose'", "'variableDeclaration'", 
                     "'initialise'", "'register'", "'wme'", "'with'", "'extends'", 
                     "'property'", "'mental_act'", "'state'", "'return'", 
                     "'policy'", "','", "'\"'", "'behaviour_mods'", "'precondition'", 
                     "'specificity'", "'context_condition'", "'entry_condition'", 
                     "'teammembers'", "'success_condition'", "'r_signal'", 
                     "'success_test'", "'priority'", "'_modifier'", "'ignore_failure'", 
                     "'persistent'", "'when_fails'", "'when_succeeds'", 
                     "'effect_only'", "'team_effect_only'", "'post'", "'post_to'", 
                     "'ruleMods'", "'searchMem'", "'bindMem'", "'enityMem'", 
                     "'outMem'", "'touchedMem'", "'modifiedMem'", "'test'", 
                     "'wme_test'", "'::'", "'<'", "'>'", "'<='", "'>='", 
                     "'!='", "'conditional'", "'sequential'", "'parallel'", 
                     'null', "'collection'", "'subgoal'" ];

var symbolicNames = [ 'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', "SEQ", "PAR", "BEH", "COLL", "SUBG", "TYPE", 
                      "CHAR", "INT", "WS", "ATOMIC", "JOIN", "ADAPTIVE" ];

var ruleNames =  [ "prog", "g_package", "g_import", "constants", "teamNeeded", 
                   "decisionCycle", "conflictDecl", "behavingEntity", "initialTree", 
                   "behaviour", "ruleGroup", "g_rule", "r_assert", "mentalActAssert", 
                   "wmeAssert", "wmeAssertFrag", "assignedWMEAssert", "behaviorStep", 
                   "actStep", "goalStep", "execParallelStep", "conditionalStep", 
                   "modifyStep", "anonStep", "ruleStep", "chooseStep", "varDec", 
                   "initializer", "wmeReg", "actionReg", "wmeDec", "propertyDec", 
                   "mentalAct", "stateReturn", "g_with", "subgoal", "params", 
                   "param", "name", "nameList", "string", "behavior_modifiers", 
                   "stepMod", "ruleMod", "test", "wme_test_sequence", "wme_test", 
                   "wme_field_test", "conditional" ];

function ABLParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

ABLParser.prototype = Object.create(antlr4.Parser.prototype);
ABLParser.prototype.constructor = ABLParser;

Object.defineProperty(ABLParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

ABLParser.EOF = antlr4.Token.EOF;
ABLParser.T__0 = 1;
ABLParser.T__1 = 2;
ABLParser.T__2 = 3;
ABLParser.T__3 = 4;
ABLParser.T__4 = 5;
ABLParser.T__5 = 6;
ABLParser.T__6 = 7;
ABLParser.T__7 = 8;
ABLParser.T__8 = 9;
ABLParser.T__9 = 10;
ABLParser.T__10 = 11;
ABLParser.T__11 = 12;
ABLParser.T__12 = 13;
ABLParser.T__13 = 14;
ABLParser.T__14 = 15;
ABLParser.T__15 = 16;
ABLParser.T__16 = 17;
ABLParser.T__17 = 18;
ABLParser.T__18 = 19;
ABLParser.T__19 = 20;
ABLParser.T__20 = 21;
ABLParser.T__21 = 22;
ABLParser.T__22 = 23;
ABLParser.T__23 = 24;
ABLParser.T__24 = 25;
ABLParser.T__25 = 26;
ABLParser.T__26 = 27;
ABLParser.T__27 = 28;
ABLParser.T__28 = 29;
ABLParser.T__29 = 30;
ABLParser.T__30 = 31;
ABLParser.T__31 = 32;
ABLParser.T__32 = 33;
ABLParser.T__33 = 34;
ABLParser.T__34 = 35;
ABLParser.T__35 = 36;
ABLParser.T__36 = 37;
ABLParser.T__37 = 38;
ABLParser.T__38 = 39;
ABLParser.T__39 = 40;
ABLParser.T__40 = 41;
ABLParser.T__41 = 42;
ABLParser.T__42 = 43;
ABLParser.T__43 = 44;
ABLParser.T__44 = 45;
ABLParser.T__45 = 46;
ABLParser.T__46 = 47;
ABLParser.T__47 = 48;
ABLParser.T__48 = 49;
ABLParser.T__49 = 50;
ABLParser.T__50 = 51;
ABLParser.T__51 = 52;
ABLParser.T__52 = 53;
ABLParser.T__53 = 54;
ABLParser.T__54 = 55;
ABLParser.T__55 = 56;
ABLParser.T__56 = 57;
ABLParser.T__57 = 58;
ABLParser.T__58 = 59;
ABLParser.T__59 = 60;
ABLParser.T__60 = 61;
ABLParser.T__61 = 62;
ABLParser.T__62 = 63;
ABLParser.T__63 = 64;
ABLParser.T__64 = 65;
ABLParser.T__65 = 66;
ABLParser.T__66 = 67;
ABLParser.T__67 = 68;
ABLParser.T__68 = 69;
ABLParser.T__69 = 70;
ABLParser.T__70 = 71;
ABLParser.T__71 = 72;
ABLParser.T__72 = 73;
ABLParser.T__73 = 74;
ABLParser.T__74 = 75;
ABLParser.T__75 = 76;
ABLParser.T__76 = 77;
ABLParser.T__77 = 78;
ABLParser.T__78 = 79;
ABLParser.T__79 = 80;
ABLParser.T__80 = 81;
ABLParser.T__81 = 82;
ABLParser.T__82 = 83;
ABLParser.T__83 = 84;
ABLParser.T__84 = 85;
ABLParser.T__85 = 86;
ABLParser.T__86 = 87;
ABLParser.T__87 = 88;
ABLParser.T__88 = 89;
ABLParser.T__89 = 90;
ABLParser.T__90 = 91;
ABLParser.SEQ = 92;
ABLParser.PAR = 93;
ABLParser.BEH = 94;
ABLParser.COLL = 95;
ABLParser.SUBG = 96;
ABLParser.TYPE = 97;
ABLParser.CHAR = 98;
ABLParser.INT = 99;
ABLParser.WS = 100;
ABLParser.ATOMIC = 101;
ABLParser.JOIN = 102;
ABLParser.ADAPTIVE = 103;

ABLParser.RULE_prog = 0;
ABLParser.RULE_g_package = 1;
ABLParser.RULE_g_import = 2;
ABLParser.RULE_constants = 3;
ABLParser.RULE_teamNeeded = 4;
ABLParser.RULE_decisionCycle = 5;
ABLParser.RULE_conflictDecl = 6;
ABLParser.RULE_behavingEntity = 7;
ABLParser.RULE_initialTree = 8;
ABLParser.RULE_behaviour = 9;
ABLParser.RULE_ruleGroup = 10;
ABLParser.RULE_g_rule = 11;
ABLParser.RULE_r_assert = 12;
ABLParser.RULE_mentalActAssert = 13;
ABLParser.RULE_wmeAssert = 14;
ABLParser.RULE_wmeAssertFrag = 15;
ABLParser.RULE_assignedWMEAssert = 16;
ABLParser.RULE_behaviorStep = 17;
ABLParser.RULE_actStep = 18;
ABLParser.RULE_goalStep = 19;
ABLParser.RULE_execParallelStep = 20;
ABLParser.RULE_conditionalStep = 21;
ABLParser.RULE_modifyStep = 22;
ABLParser.RULE_anonStep = 23;
ABLParser.RULE_ruleStep = 24;
ABLParser.RULE_chooseStep = 25;
ABLParser.RULE_varDec = 26;
ABLParser.RULE_initializer = 27;
ABLParser.RULE_wmeReg = 28;
ABLParser.RULE_actionReg = 29;
ABLParser.RULE_wmeDec = 30;
ABLParser.RULE_propertyDec = 31;
ABLParser.RULE_mentalAct = 32;
ABLParser.RULE_stateReturn = 33;
ABLParser.RULE_g_with = 34;
ABLParser.RULE_subgoal = 35;
ABLParser.RULE_params = 36;
ABLParser.RULE_param = 37;
ABLParser.RULE_name = 38;
ABLParser.RULE_nameList = 39;
ABLParser.RULE_string = 40;
ABLParser.RULE_behavior_modifiers = 41;
ABLParser.RULE_stepMod = 42;
ABLParser.RULE_ruleMod = 43;
ABLParser.RULE_test = 44;
ABLParser.RULE_wme_test_sequence = 45;
ABLParser.RULE_wme_test = 46;
ABLParser.RULE_wme_field_test = 47;
ABLParser.RULE_conditional = 48;

function ProgContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ABLParser.RULE_prog;
    return this;
}

ProgContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgContext.prototype.constructor = ProgContext;

ProgContext.prototype.g_package = function() {
    return this.getTypedRuleContext(G_packageContext,0);
};

ProgContext.prototype.g_import = function() {
    return this.getTypedRuleContext(G_importContext,0);
};

ProgContext.prototype.behavingEntity = function() {
    return this.getTypedRuleContext(BehavingEntityContext,0);
};

ProgContext.prototype.EOF = function() {
    return this.getToken(ABLParser.EOF, 0);
};

ProgContext.prototype.enterRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.enterProg(this);
	}
};

ProgContext.prototype.exitRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.exitProg(this);
	}
};




ABLParser.ProgContext = ProgContext;

ABLParser.prototype.prog = function() {

    var localctx = new ProgContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, ABLParser.RULE_prog);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 98;
        this.g_package();
        this.state = 99;
        this.g_import();
        this.state = 100;
        this.behavingEntity();
        this.state = 101;
        this.match(ABLParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function G_packageContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ABLParser.RULE_g_package;
    return this;
}

G_packageContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
G_packageContext.prototype.constructor = G_packageContext;

G_packageContext.prototype.name = function() {
    return this.getTypedRuleContext(NameContext,0);
};

G_packageContext.prototype.enterRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.enterG_package(this);
	}
};

G_packageContext.prototype.exitRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.exitG_package(this);
	}
};




ABLParser.G_packageContext = G_packageContext;

ABLParser.prototype.g_package = function() {

    var localctx = new G_packageContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, ABLParser.RULE_g_package);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 103;
        this.match(ABLParser.T__0);
        this.state = 104;
        this.name();
        this.state = 105;
        this.match(ABLParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function G_importContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ABLParser.RULE_g_import;
    return this;
}

G_importContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
G_importContext.prototype.constructor = G_importContext;

G_importContext.prototype.name = function() {
    return this.getTypedRuleContext(NameContext,0);
};

G_importContext.prototype.enterRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.enterG_import(this);
	}
};

G_importContext.prototype.exitRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.exitG_import(this);
	}
};




ABLParser.G_importContext = G_importContext;

ABLParser.prototype.g_import = function() {

    var localctx = new G_importContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, ABLParser.RULE_g_import);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 107;
        this.match(ABLParser.T__2);
        this.state = 108;
        this.name();
        this.state = 109;
        this.match(ABLParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ConstantsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ABLParser.RULE_constants;
    return this;
}

ConstantsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ConstantsContext.prototype.constructor = ConstantsContext;

ConstantsContext.prototype.name = function() {
    return this.getTypedRuleContext(NameContext,0);
};

ConstantsContext.prototype.enterRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.enterConstants(this);
	}
};

ConstantsContext.prototype.exitRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.exitConstants(this);
	}
};




ABLParser.ConstantsContext = ConstantsContext;

ABLParser.prototype.constants = function() {

    var localctx = new ConstantsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, ABLParser.RULE_constants);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 111;
        this.match(ABLParser.T__3);
        this.state = 112;
        this.name();
        this.state = 113;
        this.match(ABLParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TeamNeededContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ABLParser.RULE_teamNeeded;
    return this;
}

TeamNeededContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TeamNeededContext.prototype.constructor = TeamNeededContext;


TeamNeededContext.prototype.enterRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.enterTeamNeeded(this);
	}
};

TeamNeededContext.prototype.exitRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.exitTeamNeeded(this);
	}
};




ABLParser.TeamNeededContext = TeamNeededContext;

ABLParser.prototype.teamNeeded = function() {

    var localctx = new TeamNeededContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, ABLParser.RULE_teamNeeded);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 115;
        this.match(ABLParser.T__4);
        this.state = 116;
        _la = this._input.LA(1);
        if(!(_la===ABLParser.T__5 || _la===ABLParser.T__6)) {
        this._errHandler.recoverInline(this);
        }
        else {
            this.consume();
        }
        this.state = 117;
        this.match(ABLParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DecisionCycleContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ABLParser.RULE_decisionCycle;
    return this;
}

DecisionCycleContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DecisionCycleContext.prototype.constructor = DecisionCycleContext;

DecisionCycleContext.prototype.name = function() {
    return this.getTypedRuleContext(NameContext,0);
};

DecisionCycleContext.prototype.enterRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.enterDecisionCycle(this);
	}
};

DecisionCycleContext.prototype.exitRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.exitDecisionCycle(this);
	}
};




ABLParser.DecisionCycleContext = DecisionCycleContext;

ABLParser.prototype.decisionCycle = function() {

    var localctx = new DecisionCycleContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, ABLParser.RULE_decisionCycle);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 119;
        this.match(ABLParser.T__7);
        this.state = 120;
        this.name();
        this.state = 121;
        this.match(ABLParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ConflictDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ABLParser.RULE_conflictDecl;
    return this;
}

ConflictDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ConflictDeclContext.prototype.constructor = ConflictDeclContext;

ConflictDeclContext.prototype.name = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(NameContext);
    } else {
        return this.getTypedRuleContext(NameContext,i);
    }
};

ConflictDeclContext.prototype.enterRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.enterConflictDecl(this);
	}
};

ConflictDeclContext.prototype.exitRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.exitConflictDecl(this);
	}
};




ABLParser.ConflictDeclContext = ConflictDeclContext;

ABLParser.prototype.conflictDecl = function() {

    var localctx = new ConflictDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, ABLParser.RULE_conflictDecl);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 123;
        this.match(ABLParser.T__8);
        this.state = 125; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 124;
            this.name();
            this.state = 127; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===ABLParser.CHAR);
        this.state = 129;
        this.match(ABLParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BehavingEntityContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ABLParser.RULE_behavingEntity;
    return this;
}

BehavingEntityContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BehavingEntityContext.prototype.constructor = BehavingEntityContext;

BehavingEntityContext.prototype.TYPE = function() {
    return this.getToken(ABLParser.TYPE, 0);
};

BehavingEntityContext.prototype.initialTree = function() {
    return this.getTypedRuleContext(InitialTreeContext,0);
};

BehavingEntityContext.prototype.teamNeeded = function() {
    return this.getTypedRuleContext(TeamNeededContext,0);
};

BehavingEntityContext.prototype.decisionCycle = function() {
    return this.getTypedRuleContext(DecisionCycleContext,0);
};

BehavingEntityContext.prototype.conflictDecl = function() {
    return this.getTypedRuleContext(ConflictDeclContext,0);
};

BehavingEntityContext.prototype.varDec = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VarDecContext);
    } else {
        return this.getTypedRuleContext(VarDecContext,i);
    }
};

BehavingEntityContext.prototype.behaviour = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(BehaviourContext);
    } else {
        return this.getTypedRuleContext(BehaviourContext,i);
    }
};

BehavingEntityContext.prototype.g_rule = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(G_ruleContext);
    } else {
        return this.getTypedRuleContext(G_ruleContext,i);
    }
};

BehavingEntityContext.prototype.enterRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.enterBehavingEntity(this);
	}
};

BehavingEntityContext.prototype.exitRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.exitBehavingEntity(this);
	}
};




ABLParser.BehavingEntityContext = BehavingEntityContext;

ABLParser.prototype.behavingEntity = function() {

    var localctx = new BehavingEntityContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, ABLParser.RULE_behavingEntity);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 131;
        this.match(ABLParser.T__9);
        this.state = 132;
        this.match(ABLParser.TYPE);
        this.state = 133;
        this.match(ABLParser.T__10);
        this.state = 135;
        _la = this._input.LA(1);
        if(_la===ABLParser.T__4) {
            this.state = 134;
            this.teamNeeded();
        }

        this.state = 138;
        _la = this._input.LA(1);
        if(_la===ABLParser.T__7) {
            this.state = 137;
            this.decisionCycle();
        }

        this.state = 141;
        _la = this._input.LA(1);
        if(_la===ABLParser.T__8) {
            this.state = 140;
            this.conflictDecl();
        }

        this.state = 148;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===ABLParser.T__43 || _la===ABLParser.TYPE) {
            this.state = 143;
            this.varDec();
            this.state = 144;
            this.match(ABLParser.T__1);
            this.state = 150;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 154;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(((((_la - 92)) & ~0x1f) == 0 && ((1 << (_la - 92)) & ((1 << (ABLParser.SEQ - 92)) | (1 << (ABLParser.PAR - 92)) | (1 << (ABLParser.COLL - 92)) | (1 << (ABLParser.ATOMIC - 92)) | (1 << (ABLParser.JOIN - 92)) | (1 << (ABLParser.ADAPTIVE - 92)))) !== 0)) {
            this.state = 151;
            this.behaviour();
            this.state = 156;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 160;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===ABLParser.T__17) {
            this.state = 157;
            this.g_rule();
            this.state = 162;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 163;
        this.initialTree();
        this.state = 164;
        this.match(ABLParser.T__11);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function InitialTreeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ABLParser.RULE_initialTree;
    return this;
}

InitialTreeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InitialTreeContext.prototype.constructor = InitialTreeContext;

InitialTreeContext.prototype.behaviorStep = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(BehaviorStepContext);
    } else {
        return this.getTypedRuleContext(BehaviorStepContext,i);
    }
};

InitialTreeContext.prototype.enterRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.enterInitialTree(this);
	}
};

InitialTreeContext.prototype.exitRule = function(listener) {
    if(listener instanceof ABLListener ) {
        listener.exitInitialTree(this);
	}
};




ABLParser.InitialTreeContext = InitialTreeContext;

ABLParser.prototype.initialTree = function() {
